--- a/app/src/main/res/layout-land/activity_main4.xml
+++ b/app/src/main/res/layout-land/activity_main4.xml
@@ -22,42 +22,6 @@
         android:textColor="@android:color/background_light"
         android:textSize="20sp" />
 
-    <HorizontalScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/textView10"
-        android:layout_centerHorizontal="true">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:id="@+id/imageView4"
-                android:background="@drawable/qui"
-                android:layout_margin="10dp"/>
-
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:id="@+id/imageView5"
-                android:background="@drawable/quinc"
-                android:layout_margin="10dp"/>
-
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:id="@+id/imageView6"
-                android:layout_weight="1"
-                android:background="@drawable/quince"
-                android:layout_margin="10dp"/>
-        </LinearLayout>
-    </HorizontalScrollView>
-
     <Button
         android:text="INICIO"
         android:layout_width="wrap_content"
@@ -69,16 +33,51 @@
         android:background="@android:color/transparent"
         android:textSize="18sp" />
 
+    <HorizontalScrollView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="7dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="200dp"
+                android:id="@+id/imageView4"
+                android:background="@drawable/qui"
+                android:layout_margin="10dp"
+                android:layout_height="200dp" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:id="@+id/imageView5"
+                android:background="@drawable/quinc"
+                android:layout_margin="10dp"
+                android:layout_height="200dp" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:id="@+id/imageView6"
+                android:layout_weight="1"
+                android:background="@drawable/quince"
+                android:layout_margin="10dp"
+                android:layout_height="200dp" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
+        android:layout_width="300dp"
+        android:layout_height="220dp"
         android:layout_above="@+id/button2"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentEnd="true">
 
         <TextView
-            android:text="Precio: 2000 Bs. \nContiene: \n4 Parlantes activos JBL , 2 Bajos Beringer \nCabina de Dj \n4 Cañones led \n1 Lacer , Camara de humo , Camara de burbuja"
+            android:text="Precio: 2000 Bs. \nContiene: \n4 Parlantes activos JBL \n2 Bajos Beringer \nCabina de Dj \n4 Cañones led \n1 Lacer \nCamara de humo \nCamara de burbuja"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView11"
