--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -34,9 +34,9 @@
 
     <ScrollView
         android:layout_width="400dp"
-        android:layout_height="460dp"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_height="240dp">
 
         <LinearLayout
             android:layout_width="match_parent"
