23 /nov/16 12:44 jheyson zurita -botones con animacion -acivity de eventos nuestros probado y testeado

--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -36,7 +36,7 @@
         android:layout_width="400dp"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_height="240dp">
+        android:layout_height="250dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +50,9 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 style="@style/Widget.AppCompat.ImageButton"
-                android:background="@drawable/para1" />
+                android:scaleType="fitXY"
+                android:src="@drawable/para1"
+                android:theme="@style/Desing"/>
 
             <TextView
                 android:text="PAQUETE BASICO"
@@ -67,7 +69,8 @@
                 android:layout_height="200dp"
                 android:id="@+id/imageButton2"
                 android:scaleType="fitXY"
-                android:background="@drawable/para2" />
+                android:src="@drawable/para2"
+                android:theme="@style/Desing"/>
 
             <TextView
                 android:text="15 AÑOS"
@@ -84,7 +87,8 @@
                 android:layout_height="200dp"
                 android:id="@+id/imageButton3"
                 android:scaleType="fitXY"
-                android:background="@drawable/para3" />
+                android:src="@drawable/para3"
+                android:theme="@style/Desing"/>
 
             <TextView
                 android:text="PAQUETE PREMIUN"
@@ -100,7 +104,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:id="@+id/imageButton4"
-                android:background="@drawable/para4" />
+                android:src="@drawable/para44"
+                android:scaleType="fitXY"
+                android:theme="@style/Desing"/>
 
             <TextView
                 android:text="NUESTROS EVENTOS"
